# mcp_server_demo

./: README.md  analyze2.py  main.py  pyproject.toml
RecorderApp/: README.md  index.html  package-lock.json  package.json
RecorderApp/src/: App.jsx
RecorderApp/src/components/: Recorder.css  Recorder.jsx
Server/: analyze2.py  mcp_server.py  pyproject.toml
