[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-cors>=6.0.1",
    "flask[async]>=3.1.1",
    "mcp[cli]>=1.12.1",
    "numpy>=2.3.1",
    "pyaudioop",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
]
